--- a/FennecFox/FennecFox.resx
+++ b/FennecFox/FennecFox.resx
@@ -120,8 +120,16 @@
   <metadata name="statusBrowser.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>71, 3</value>
   </metadata>
+  <metadata name="contextMenuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>198, 3</value>
+  </metadata>
+  <metadata name="statusBrowser.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>71, 3</value>
+  </metadata>
   <data name="textBox1.Text" xml:space="preserve">
-    <value>Main Thread URL: The first page of the game thread
+    <value>Get Post IDs tab
+
+Main Thread URL: The first page of the game thread
 
 Get Em: Retrieves the votes beginning from First Post.
 
@@ -135,7 +143,12 @@ First Post: Set the 1st post to begin retrieving votes from.  To retrieve from d
 
 Last Post: This shows what the last retrieved post # was.
 
-Posts/Page: Set this to the # of posts/page used by the gimmick account.  Must match the account's setting.</value>
+
+Gimmick Settings Tab
+
+Username/password: user/pass of the gimmick account
+
+Test Login: attempts to login to the specified account and alerts whether it succeeded or failed.</value>
   </data>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>25</value>
