Login dialog moved out of one game. Pick a game before showing count. Shows list from lobby. More good stuff.

--- a/FennecFox/FoxParent.resx
+++ b/FennecFox/FoxParent.resx
@@ -389,6 +389,164 @@
         DI0H/z2lqhoXxUoHCQ87iLqUx8XoTG7fq0amsjEyFYrAPwG3BHAuW8RdOwAAAABJRU5ErkJggg==
 </value>
   </data>
+  <data name="tsBtnLogout.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAIAAAACACAYAAADDPmHLAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAACN8SURBVHhe7V0JeFxV9Y/6p51JU2QVEJWqiICooCJuIIKA
+        iqIoKvohfiqurAVlU1apgAICWkRAUDah7MjSlbYspXvp3qZbmn1tkpk3k2Qmyf3/fo85430vb967bzKT
+        TOr0+84308x9957zO+eee+65y6uoKP8rI1BGoIxAGYEyAmUEygiUESgjUEagjEAZgTICZQTKCJQRKCNQ
+        RqCMQBmBMgJlBMoI7CQIvLDHHrvOjkb3n15VdfCsaPTIGRMmHEfid/6Nv7HMTiLu/64YcyKRA2ZGIt+D
+        Yq+eVVn5MGjpzGg0hk9lQpmyS+1nUQfrYp3/u4iOAclnVFYebis8EllhouS8yrButMG2xgAkOzeLcysq
+        /o/ue2Zl5W1QSE1Yhc6BN5ibIX4P+zzbtNsGD+Rl50a7hKQD6CehFz6Anr7DT2nzoNSFEyao5aA1oE1V
+        VaoGVAdqyEH8jWVYls/wWdbBunwNhLyAJ/JWQlDtXKzMiEaPghLm+yniVShqJRS2BQqsLzCxTtbNNgK8
+        xXzyunOhP4rSzBo37iC428e9QJ8NZbwOpawGsef6Kb1hzz1V43veo5oOPVS1HHmkav3851XbySer9u98
+        x6a2L31JtXzmM6rpQx9Sje9+t6rfbbec9bEttsm2yYMXbzbP4H0UoRvbTc+eMGEfgHgHKO0GeAGAXwfa
+        nnHpdN0OevvbbUW2feMbqvPXv1bxv/1NWQ8+GJrid96pOi++WLV+9auq8X3vc7aRaZM8kBfy5OaTvFMG
+        yjK2tTGC3COgqsJ4eg3AtNyAvoLetgFAD1E4x/RJk+ye3PXb3yrrH/8IrWwTA4ndeqvq+NnPVPPnPqfq
+        4CHcfJA38ujhESzKRNlGEMqx19TMCROOnxGJNLsBZBDGoKwWinbQxImq6dOfVp2XXaasBx4oitJzGUbs
+        r39Vraeequr22msIX+TVK3CkbJRx7GlmBDhG8uUct7t/KRPU0c3qiq/bd1/V+q1vKfZIk55bzDLxv/9d
+        tX3ve4o86TySZwaNlEE3aMpIWUcA0rHRxNKKil2Qafu7DhIDq2UAbxtAJJBZwthOxceL5OKHYyjxe+9V
+        bT/6kapFsKnzTBkoiztYpMyUfWxoqUhczq2q2guKn6crnz1mfSbA04Fs/PjHVfef/jTqPT7ISLrhlcir
+        w3BhBJTJ7Q0oOzEoErylXS0yaIcBgK268udD+ZKw4VSLVPvOd6qO885TcUTxY4YQj7QhWNwObyBySIKJ
+        MrpinK3EorS1VWDu5kSjp3DBhW5RiHPqrRmlC2iNn/2sit1999hRvMtI6Q0aPvYxhxFQRskfiOzEgpgU
+        GObSrA559x9B8AFd+Rwj9Z7C7y2nnabi6Eljptfn8lD336+av/zlIfJJXKDhMEBsSlNrBeIKS6rHIF+e
+        EqG5CMOMGgMloZrdd1ft558/9hXvMogWzBR0OfmdshODrCcANsSoQHCXVjVzx4+fNDsSaaXAshK3QVO8
+        HfHvv7/qvPZaFf/Xv3ZKavvFL9Q2zGR0QyAGXJUUXIgRsSot7Q2TG2bAYNmrREh+rs2M+RwT7bEfwV4n
+        ovzYffcNJUyxYjsJtf/mN2rbHnvYMgsRCx0bYrXTZA1VRcVbINxTuoBvuJW/zz5qx3XXqRjm98Wkbtb/
+        z3+qGGKL2EMPqdi//61ijz6qYg8/rGJw2TF4HtsAi8wHjWArPIFuBMTEYQTAjNgNs++N/uOIbq/j/Fdo
+        cWa5lsurpK1IpXb87neq+667CkOYNXQj8IpPm6bizzyj4v/5j7JeeEFZM2aoxMyZRmShnDV9urKef17F
+        n31WxZ980jaSbnihQvHZimmiYCCfxMZhBMBu9DU4DA7mRiKn68p/DYawOaN4W/kM+LDa1o1VtzDUhdW9
+        LPFZ9upHHlHxp59W1osvvqk8ISi+v7PTjNrbnc/q9WS+x597TsUff1x1w2N0w9gcvOh8GXxv+va3HUZA
+        bIiRjhkxHIYKRu9RLIYcgeg2KcK8DMGqISCFFGpBUNQ1dWp4gtLpwuNPPfVm7/YjKM4UhcFUKrg+d1vw
+        EDF4m+577gkvB2SvP+EEBybEiFgJbsSQWJrKUDLlIMACEYJR7nqX8utPPFF1/uUvoagLCy8cty26dbhn
+        I4JHMAVloK9P1cLNk2JQrFH9Gh/xJ56wh4lOrBQay3b77Wo7kkV6xyBWxEzzBAtMZSiJcvOi0VNlwyU/
+        V2FsY4pXaNvBB6sdt9yiOm+7zYjoatnLbMXnoMRLL3n/BgWZgpLs6lJn77KLTU2II/S2ctbvwQ89E4cl
+        2wiQDQyiDgTAWxAI6xgRMx1DYmoqx6iWm1ZR8TYEfuuFee6U0QXbvPfeqv2KK9SOP/85kBi1c7y1OLbn
+        oOTLL6v+jg6Vrq/3LoOebAqIwwAwG9Db7G9rU/0tLSo5d64vP/ozNATOOGgIQfK2/PznDpyIGbHL7lwG
+        psTWVJZRKweGf6pb7loIwnFNqOmss1THTTf50g64xThdPVxqLkpgLE43NGSVm66r8y4LJZiC4TAALjlr
+        7fe3ttr1DA4OqnRtrbIQDPrx5/gNRtyFWU6Q3LXHHuvAitjpWBJbU1lGpRzWtyvBZAN3w5AWwYJ15ddg
+        M2YHkj1+xGDKYq/3oZ4FC9QgxmtdyBSU8jJSyC0Ygx3PYgpnCobDAFx8iAFIXYM9PYreJ4hX/XfmGnZw
+        W9kf/+hJ7RwKDjjAgRkxFDyJLTE2lWfEy4HRy4VZLnuu03r+JmS/2i6/XHXccIMn0UVy4cfiWJ+L0CNT
+        mzd7KnQNXD3H7lpE1o7nYUimQDgMAD1Wr8dtAOIN+tavV9Zjj/nzrcuDxFMXZjG5cGg55xxVja1u0nGI
+        IbEUXImxqTwjWm7WxIl7zotEuoRRJjU2gnmhulNOUe1/+MN/acoU1U7C3wiI7fL9CCB7KUGEXApgbQPA
+        8OGoB383BcJhANxJrPHD8T9XPb3btysL7fjy75KNWUd6QhsDF9UcdZQDO2KZNQBgTKxNZRqxcmDwFloq
+        ifNYTmVE+ZuxY7cNizztv/+9k6B85vgtzOl9CT2IQZifMFkD4D5BvT4AbwqCwwDoSbR6+pubfevp3rjx
+        TQMIkkX7nR5vx803D8Gl9ZJLVDWSZIIfsSSmgi+xNpVpRMq9uueeE8FcjzC4FBbLVS6hRuyVa7vmGidl
+        cv/2bl4/Qs/qR4YuSJCsAWAocdQHwIOeld8dBoC5vF5PkAGwjuYVK+w1hUCZdHkx3aQRuPHZjjyJjiEx
+        FXyJNTE3lavo5eD6v+Pu/cL8pve+V7VddZWD2uENYgyy4AaDiNM7EwGyBgAwHXUCbJPnWcZhABxKNP76
+        m5qM6tmI2UkXZxAGskmZOHIGOzActF555X8J8VL1fvtljWCIFwDmpnIVvRyU/7AYAA9Tklmh2m9+U7Vi
+        sUeo7eqrVQwZPYuuP4D6li83Ap0CvoJkkR0DIMJ21AtFmALgMAB6Eo2/NMZ503pegnfrRFwTJJ/+O3cV
+        7wDvOla1ONmkY0lsNS/wsCk/RS3Hrc0vIzDhGEVaQQPI0EYkfVqw2NOCgxskWniMwLD3B1APUricc5sw
+        vxKrfhfsuuubBnDjjc66kdAxqWOIB6An0XmEq+5vbDSqK9Xbqx7AQk8nA0kDWfUynB0IXsSOGAqexFZw
+        JuYlsa183oQJJ2SZymz04Fk50rYvfEE1X3qpTS1wabE77lAWp1dBBKUNJhJGYM9DsHbOuHHZFG7t9dc7
+        64c7zssAuAXdzSeU2fL660b1NW/YoO495phgWT2w6ECw3IxAkEQMBU9uHNGxJvamshWtHFzSVGHqdc79
+        M8pfhx7ZePbZqhmbH0jc7WOx9xtQ37JlgSDTOzyBeiV3z8/LsLegDWsMjjYwNJgK7xgCOJR48LoOxjwd
+        sxeTOqchMTUDewFNZNbLxGHU9ALErRF5AWIpuBJjwZvYm/BRtDJA4S1gop4HIknc6UorJW06/HDVdOGF
+        NrUh929xWmVACYzZg+l0IMAvQgm68qdgqtmA+fSQNqBEUwAcBkBPkoPftVDMAniDoHrjmL1c/I53qNUX
+        XWQku95eFzqM4LcZq4WCKzEWvIk9dRDER9F+fw23awkz/OQuV2G07owzVOMFF6gmCG+f4cOCiAmlkFkL
+        Ynjb4sXq3EgkawBTYWw7sL7gWT+GnaD65HeHAdCYfHiuw+9tmzYF1j0LfF2Bc4NdDCoNMZBy7YiZiCGx
+        FFyJsY45dWAqX8HLvYItS8LMAhgAT8WSNuAsfSPcH6kLPdXCsq8RYTwcHBjwBbU3HldXYTlZev8jxx+v
+        YgQ3VxuYz5sK7jAAjMNBPHdi+taPTSR+9Se7u+0A9bmvfz2wviHtQS52IOK4DkYk+BLrrBGM5raxVyKR
+        5bwyhcREhTC4DTdvNJx7rmrFeGlxTDakvvnzA5X1AFYTRfl3oOcH1g3vk5cBYLpqcSYQQNwnEFQ/eZ4M
+        fJoM69Tb7IKnaUAcsBm3lwi+xFpwpw6C2i/K75D6rWCiVxjhrlabQeQA6n/6U9Xwq1+pGKY0FoM/QxrA
+        ur4fszVLlmSV/1sEfK1IKAXWDeMzBcDhAeB+A+vOyJUK4HsLZg402n9BiaZ16uVaEXPUIpgUAyDWgjt1
+        QF2YyliwcvPHj3+vxoS964fj0zrer4O9fq24msXinNyQkphnBzH3EOolkOeOH6/WwMCM6sYYHFSvZwyA
+        5JVR/ZCvD8vCQW1ce9hh6vxoVLXSCxhiIuW6kEYnputwdoIYE2sde+oiqP2C/47dqydxByuJYxIZI1Xj
+        aHQdtjx3sQcxkjakvnnzAsf+ybiWhQbwLC50Mq3XwnTOVHiHB+CtI4xfDCiBtHFQ7PII3Dh5f/FrXzOq
+        091uIwye2ArOxF2MgLowlbFg5RB9nicGsDCz74+WueWkk2xrtZAODUPp6mpfRb2aSfVeAiPoRo8wrhsG
+        aCq0wwAYv4SQIY3VQL92FmNRigZwNYK5MPVKWR4m2YIFImJMIuaCP3VhKmPByqHx24WBxZoBbP/+91Ub
+        5v4JKCkMBWX+/oi7gAjg47jeLUy9CSjRVGjdAJiECdNOb8Cyc9vWrdn4ZS2CwjB1s2wcHnX76adnDYCY
+        Zw0AujCVsWDlXo1G79cNgPfhrMHq1fYzz1Qx3tSFFUBTogv1YyyN7V+S7q3FlMi0XrscpnOmQjs8AJM3
+        IWTgeB3UzqU4/EojfuaLXwxXd4aPpl/+Uq1GYolY6wZAXQS1XfDfMf48ybGfxGkJmVr/4Q+rRoz/FgOo
+        ENQTsGDTim1gBO62gw4KVa/NA4IuU+EdBoAETBgZWHYQi0B+bd34qU/lLwfq34HAeh0wINbEXPCnLkxl
+        LFi5BdHoDN0AODWpxsJFG/L/CSz8hKFeHOvyY2zDnDk2cAtxQVQCwVkoQhraVGjHEIBraUK1A74GAnYN
+        /fUrX7HluAhYxRFjhK0/jsUhdjJirRsAdWEqY8HKQfmvuQ1gE445dSDaTYDRMNQXsHf/NazoEbh6uMAw
+        9dplMRyZCu0wAAM5rMmTVfyHP1Qx7HnoRoCWeu0137bu+8EPsnFANTKYceRLjOTBsnAiQ9XYLzjEAKAL
+        UxkLVu71SGQZV6ZItEauVVfDALowRicYQIWg1KxZvsA9iwCIc/84xuUw9dpl0TNNhXYYAKZdXm1ZMML4
+        d7+rYhjHu+HSderDxlW/th6FV5Es5pJDDrGfZT0WDcEQry3HHWdjTcwFf+rCVMaClUPjC7wMII6xM0FF
+        haDU7Nm+wD2Bse8KZP6ydXKWYUroOaZCOwwAJ3WybWBYi+POom6s73ejB+ai3oDtZ1weFgOYd+CB/60H
+        hhDH7MlEplqk2YcYAHRhKmPBymHuOVMMYAmskXfrV8MNJmgAIakvYO/+bKRz/4y9hWHrtcvDeEyFdhgA
+        eqXFGQ3yGrbCP/nJQEoFHES9G55DDOB5LF+764zjruMgGRtgAMSamAv+1IWpjAUrh8afYjKCJAawFcwl
+        MXaGpd6ATRtLECTe/5GPhK7X5gNGYCq0bgANOMUUC0nppUt927rp6KOzBvAYpoRe9Vu4f9gPvybcOOY2
+        AOrCVMaClVsYjT4oBsA5KTcqbMe16kmMnWGpJyBduwm59oc++tHQ9dp8YNw1FdphADC4GFKvYWigpsa3
+        rSvg9sUDPE4DyFF/AsFiggGvB7XBIxFrYi74UxemMhasHBqf6jaArVjtSnDsDElJTIn8GOvCZsw7AF7Y
+        eu3yGL9NhXYYAKZbMezEMSaM40F5gPOhODGAmTgDmKvuODxFLllbgfEQAxiNrWGwusliAItkOxjy3AkE
+        M0mMn0MI6c9kLoKignYA34f4IufzfnVjXSIfA2jE6l38iCOMiW7brx1uD9O3sC16//t9605wKHDL9ZOf
+        qDp0BBoAMdc8wGRTGQtWDo2fTCaEOC1ZjkONcfSaJFxY8sc/DkUx7KL1Y24O9haErdMuj8ykqdC6B2jE
+        G0fi2HBiSqmAQHYNDozoBrDhgx/0rdvC2kcSJ6p0olFswdBBrHXsqQtTGQtWbsGuux7Io8tCZIrUjZ6T
+        wDn3HiRIwlADtlf5MVe/cqXqhHcJU6ddFr3IVGhHKhgGYCHuMKWBzP0Budp6GOO5bgDNBvUncbZA5E1i
+        IchC59qIm0RsA9CIujCVsWDl5uJdebj0OCWMcCZAaodlW4zYcarF9gS5CBsdkxrVIGALYm45FKo/E/id
+        c2vsxQuqV353GABeLkU5TCjIy3B4u/Rd78oawLnIasYRYwTVnUAsQCNIIPCzEDCy/BocsyfOgjt1QF2Y
+        yljQcouj0TU8ukwSA2jChlCLwjFqB/hJbGUyoRjmwB0BUfR27L8zqSuJ+XaCGTaM4QTOVGiHASBTZ8th
+        QP1r1/q2sXXhQkfvvwmbRE3q9SqzHM8Sa8GdOjCVr+Dl0PhNWUYyTG2HpSfg3mwCeEnkBnroygxotcEp
+        Hq665ayLXgfZOrab5QHj+ACukunFFTI0MD+qX7Uqq6hmeLJsHSKPx2evQaLpaaSjdfc/HVu7TOp2l4nB
+        KN14UwcFV6xphUurqj7nZmgDzrIl4D6zBNCSeMtWD5TTg3SqH61C0BbUdgy9zVEHlY41iCSmYTZgetva
+        90V4Z6CuhKDvzVh2zVVX9u/wcgO4msaP534ccrkSdent1X/gA8F1e8jRimyoG2/qIAizov0Oyd+6KBpt
+        FfcvzHUTPFirgxAcJhkc0hByUBcSSStxG1gQw704g5/EyyQScPFD2nG3m/n/ImxWDVK6I0ijknLUJX9P
+        Byz+UI6XcTJJr/cP2DUdVG+u39m59OGW2FMHQXgV9Xco/x+6AXB6wte8JHF4w5PoET7xCdVDr4Ce2wul
+        92KjpNCD+Dt7TRDTfVhsytmGR9vL4QEuwWkiU2qFAfjV32ew04iHWGQXkBjBfxDFh+FbysbBD7N/ugEQ
+        +yCciv47xqCviQHwk8mJNxCoJDGGGhGVxYCRhCj3dWTI2GuCGGfWjUOBURumvBiW68VsxOT84nPYjaT3
+        fkb/dQiS8+GZnUrWXbIdDtgH4VT03zEFiWBKYglTkqFqw2pXEkNBWErA0m/Hs+w9QcwP4mZPKiNsG8Mp
+        34vp6qBlBfLG9PVkXAmvG8BDmMLl2/YK1EVsszgDc2IfhNGI/L6ksvIJSQTRRXGZciPW73ugzHxoPcZr
+        rp2bMM+emEJPy6edsM+kcFYvKGUtPN+DxI2u/Itwh0E7en/YNlm+A16RmBJbwZmYm+AzImXAzJnCmOxU
+        YaIijqi1BznvfOhuWPyCELd7pLFk3IOgMJ+2Ap/BXoB+pHJNwZyBHcLugPNFBHCB7eTAqhqdSXZeaQZw
+        pik/RS+HVOQeYCwtzNFVkeFqvDevF1afD/FV7xfCiHiuzlQADglpHATpRVyRT5tDnsHMJY3DpUFnFnT+
+        VuEKWf3GEhrCFQg+LXSGfHjqgDcklsRU62RpYm6Ky4iUwwrV3VylEpINo60IXnopfB70AgyIKdQdSOKE
+        EWIQ428aB0d7MVXMp90+7G5OY/FpMCC/7+apETmKizDO673/HBjACqyS5sNHErEQF9iIpY4tsQ6Dx4iU
+        XRGN7g/GksIoxysyvgTzXgu9uZeBXR50L2YUN2BLVgJv/chHkAEoJY2xuw9jMhXbi7m9gw9MS/uw0bIP
+        6xJpXCYxYHDpgxcfDPr0ewvECKbTC+YhN5/ZAtdPDImlZgBJYp0PFkV/Bkxe7/YCPD20Ab2iD4FMPpSA
+        8dwEAK5BZowXLxVCiMFYTA0ig2cSzZu0V4OtYJdDPve4/wDimHxk5jPt8JzY6+fV+6834WlUyizdffe3
+        L4tGO7hnjUTLleNjLXCDfVBmPtSBYeBKjKMXoTetCfEGkJEAYTFeJnU+vJxb+bdC9iTG73zk5XNI8drY
+        EUPBk9gS45GQK+824AEuFIb5SRfGY8wLORRgM0MfQcmDanHu8GJMpRhg8d6dvBks0IMDuMrGvcgjRvB7
+        9NyuYcjKe4KJGbHTsSS2BWK/eNVUV1SMB9M1wjgTF3KOfRkCGguKTAGcfKgZXmQKwCXQU5FCbli9elQM
+        gZdU3YxTyl5rC3dA3tgwZORLJQUv2W2dwbKG2BZPcwWseTnyAjy8IKRfamQHhVBkCmNcPkQDuivjcukN
+        eP9O2FlCvqLykOo92N+Qa1HpWY75VH6esm1Gz9cv3dJ7PzHNl+8Rf44rVIhUV4oBUBCOZyKcnSTCokiK
+        YOVJzwNsTrGojAvgWZ7GgdR4wJXy+QLRjYuip+F8wbkZ7+M2gAthiMvQc/OVhUazEfIIPsSKmGU7EbAc
+        9VW/sOAtq6o6BgKkRQi54FBuueTFxzFkx9LwBvnSWgSFU7T7As/B+cFbcehyDq6M44UMYXnWy7fgxhLG
+        Gjdjg4k7saMbwFQoq34YcqQg/3ooX3CRCzc1D5omlsORZdSehRBn60MBxzT9rlvsZ1NdmOum4Q3ypRQu
+        TFiEa2OugvLdPXMKNlE+gx1ETCmvxRtEueOH27MFEOb16TW44XQtXjC5ADd2P4UzCtdiR1HQ3oFb4A02
+        otfnyzef6wOtRZ5Dx4QY6ZgRw1FTYCEaxlHmO3mcWYjuX7vy3A546jH2paHI/mFQH3rhK+hJl2sXR+dS
+        Ig9oXIaZyHloO0jR7t9vgMdZDX6HwyufjcF7oWc7sCA2OlbErhA6GNU6eKX5G5WV83TBGBTqRsDvbwCM
+        OEDphyKHQ33wKOvhEaahvis9vEJYhbM8lf4c4owaKn6Y/KXx/LaMy9cxICYO5QOzkrgOvhDWswgvOUJQ
+        s1UXkD3fbQQc/2oBTpqGUCCqgzG8CGO4HUq8Fgbx60zg6GUIDCovgQeZgnJ3wsXPh9LbqfQC8dKNupjg
+        cctNLHRsiBUxKwT2JVMHBDwMM4MY77chycsPtNehZd+Mxd/iUNwAxthiUC8U0Yr6N8PYVmMMZo/swP9T
+        +Hsx2ktDjq0wpvkwKre88pKNLC7AiFiVjOIKycjKaPQUKHdAhJUrT72MgMAQtB4oZ4CKGYPUD55bwD8D
+        Oy8ZpedrnWKAGBUS85Kra2Vl5W9EYPnk+Od6RWr2/3hpsuIrVLvQUwfoFcYA9ULpNZll3FxyUWY3DsSm
+        5BRWDIYg6Fm47TIlt17yk4seucCSvzM50gxgBwDwYAlSHEa6MTPL8ZOF0b5L+SliUgysS7bOlVVVR6/C
+        vnbdCJgsInAvBRAzZduYUoYxDAL00aQUeGgBcTh7Cd7Kj3fKRhl1mYkBsShZRRWTsbWRyAFvIM2pA8IA
+        kFFykBHI7xxH1zCXQIMAKSijmJRCG618J3LGawUpXfikTJRNl5WyE4NiYlzyda/Ze+8q9J6ndGDoHrkP
+        juDNCUkMHldxOok6OnkKB0SlDYY0jH4GoKAYnm3ha3BRH/flz0EvD8MTZaAslMmhfMhM2UteQSPBIHKz
+        bwE418lV6PJJt0p3HwbwXGXZU2kcVOKyjJFswCd7Mt/Hw94p9+/SVReiTfJOGdxyUVbKPBLYjqk2ANTp
+        IMsNmOQMZgPQsUAyt3fLkZHt9DGllJFmdl1l5X7oIXcBrH43gAygOJ8uVSMgb+TRQ/H9lImyjTSeY7a9
+        1VVVhwC0Z+Q9OfonEysMqmaVCJEX8uTFK2WgLGNWEaPNOJJARwPEhTnAtfMHXEOgVxgpg2BbbJNtM7DL
+        wdtC8j7a+O007eNtZKchut/kBTb/RrfLkzMSNBbaGBgUsm62wbZy8WHzCF53GuBLSRAuj2IcPWt1NDoL
+        kXtK3qbp9cnAUe7TZW9lZG/iJViGZfkMp2+yQcOvLfJCnsjbTrOEW0qKz/DCaROJN2K8dTrOxkHJZ6yu
+        rJyGbFosQEHZV6+Kt+C8XJZg+V16tWk9bJNtk4cn31y6tfnK8Ci8liCMo8+SKPFtYIXEK852ydA4fHLr
+        M4ln30lRUGWGJuCTxASK0MTjKyr2nBmNfhO99V4os8lUiWHLsW62wbY+X1GxF3iYmCGdH+FReCb/IovI
+        RjlFZspPHHQDGn0t5cmBrlxRrFupolBdkQRyVxBPvZB2A+2eIZ6CZQ8jEfS9M/QOfJL2ydC++NwXqO93
+        z7hxJyNjdzUvUcZ26oVvRCLtYZXNZ/gs62BdrBOMv5NtaCRtCy/CG/kUnsk/ifJQLpGR8lJuMR7iQaMR
+        g3Ebi24oo55EIgN67xUl6z1WFKwr10uxolRRpgDMOTMB50FI0rtA7wa9J0PMoZMmgfjmTNL7NHo/vpN4
+        i+aBJ+6yy8cvHj/+hBvHjfvG1EjkjH+OH//zRyORC0n8zr9dP27cqSzDsvJc5lPq4qe0IW2yfRJ5Ed7I
+        J/klkXfKQXlIlI+GQ3lpMG5j0Q1FNxIvAyHuRTcMr14tLtrdm0XZu4ExCiK910vJuoJ15epKJdhZJeL7
+        B0AHgT4IOjhDnGMfmqEP4ZO7aUgf1ugj+C70UXw3If0ZqUvqZjsktsv2SeSHfJE/Enml8YnR0GAmgcRQ
+        xEh0A8llHLoH8TMKGVqGbRRupbt7eK7e7aVwCpVL2QREeq4o2q1kUbAol8qgcqjEw0FHgD4GYq/9RIaO
+        xOcnM3QUPj+l0afxXafP4P8k99/lGT5PkvpYN9theyS2TR7IC3kib+SRxqIbiW4gQYbhZRS6txCD4HCi
+        G4R7CGGcEcoYwip+NzSg93QyqbtyKt7tvifhb7rSvRTupWy3okXJVA6VRyV+FsSLE5mA4WEKxGoVx2bo
+        C/g8DoSYMUtfxHed9N9Yls/I86yLdbJutsG22C4NRQxENw4vo3AbhNtTuL2EPoS4vQNjjFyewc8QfOMH
+        r7HdPa7rY7rbzfsp3+3a2Qt05bt7ut7L9R5OkKVXi+LdSteVfQLKnwjiC5a/BPoKiNerfxXEa9a4B4/E
+        7/wbf2MZluUzfJZ10DjEKHRjoCGIB6Ex0FOIIejewe0Z9GHDPVxMQh0yVJgage4N3PGCPjTIVBVNDP2n
+        ewC6D93106p0169H67REfZx3u30J3nQjcLt8ukjdCLxcvbj5ML1fNwb2dipTjEIMQxQtyubvLKsr/Vj8
+        38sLUPleXsA9NLiHBb8hwR0nSBBJXN3Box40yqxCDICdl/GaO1j0VL7+RxNPwOmLTN12w3cyok/VxBvk
+        M/67jUGCOr+x32vcl3Fdxnn2Vhkm6DVykZRzxwduResuP1cskCsOYK/PFSC6Zw9BiqceqA+954viJQ7I
+        e+ooXkHm9X4zALdX8DIICiPTu3yjf6/IXyJ1Pdo/HG0JcUzWiQrzInc5eV5mDlK/9GivYE/v3fnOBtw9
+        3Z1LcPd2yR+Iu5fkUt6Kz+Um/IaJXNNCU8MQb+FlIJxj55r3O+b8KEfQJb6QaRmnaPmQPC8BmyhUInm9
+        F+tBnNd0L+yUzx3le+UCpIf7ju2BPr8ABdwzCIkh3Cldrymk20D06aQeW3gli3Sj0RNHMvuQhAzjkLAk
+        z+pJHVEi23InePRIXe/BkuwxyQp6BXAjkvApgA0YVSGGQovVs4mS+syV+5e8O8c7PW0sxsM4RGIRxiMy
+        QxHQ5VNStH6f7mfE/Uq9EnixPUntSm/1SvGKUhlIs0NQoW6lSg8uuMs20koJFyIgOhEonWhEQoxTdKIX
+        Ek8koMvMRgxOz7nrZWQsFRer16u3KWOtrkCd3xKGtsxaGYEyAmUEygiUESgj8L+KwP8Da5L7dAJjKBkA
+        AAAASUVORK5CYII=
+</value>
+  </data>
   <metadata name="statusStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>223, 17</value>
   </metadata>
